@@ -11,7 +11,6 @@ import cz.vity.freerapid.swing.SwingUtils;
 import cz.vity.freerapid.swing.Swinger;
 import cz.vity.freerapid.swing.ToolbarSeparator;
 import cz.vity.freerapid.swing.binding.BindUtils;
-import cz.vity.freerapid.swing.components.PopdownButton;
 import org.jdesktop.application.ApplicationContext;
 
 import javax.swing.*;
@@ -103,10 +102,10 @@ public class ToolbarManager implements PropertyChangeListener {
         toolbar.add(getButton(Swinger.getAction("addNewLinksAction")));
         toolbar.add(new ToolbarSeparator());
         toolbar.add(getButton(Swinger.getAction("resumeAction")));
-        final PopdownButton button = new PopdownButton();
-        button.setAction(Swinger.getAction("pauseAction"));
-        setButtonProperties(button, Swinger.getAction("pauseAction"));
-        toolbar.add(button);
+//        final PopdownButton button = new PopdownButton();
+//        button.setAction(Swinger.getAction("pauseAction"));
+        //setButtonProperties(button, Swinger.getAction("pauseAction"));
+        toolbar.add(getButton(Swinger.getAction("pauseAction")));
         toolbar.add(getButton(Swinger.getAction("cancelAction")));
         toolbar.add(new ToolbarSeparator());
         toolbar.add(getButton(Swinger.getAction("topAction")));
@@ -115,6 +114,9 @@ public class ToolbarManager implements PropertyChangeListener {
         toolbar.add(getButton(Swinger.getAction("bottomAction")));
         toolbar.add(Box.createGlue());
         searchField = new SearchField(context);
+
+        searchField.setMinimumSize(new Dimension(260, 50));
+        searchField.setPreferredSize(new Dimension(260, 55));
         searchField.addKeyListener(new KeyAdapter() {
             @Override
             public void keyPressed(KeyEvent e) {
